UnityCollections에 대한 지원 추가

--- a/src/LWSerializer.asmdef
+++ b/src/LWSerializer.asmdef
@@ -1,12 +1,16 @@
 {
     "name": "LWSerializer",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "Unity.Collections"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
-    "precompiledReferences": [],
+    "precompiledReferences": [
+        ""
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
