--- a/LWBinarySerializer.csproj
+++ b/LWBinarySerializer.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
-  </ItemGroup>
-
-  <ItemGroup>
     <Reference Include="System.IO.Hashing">
       <HintPath>src\Plugins\System.IO.Hashing.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe">
+      <HintPath>src\Plugins\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
   </ItemGroup>
 
